# NYC_Taxi_DLT

./: README.md
NYC_Taxi_DLT/: GEMINI.md  README.md  databricks.yml  opencode.json  pyproject.toml
NYC_Taxi_DLT/.agents/skills/databricks-apps-python/: SKILL.md
NYC_Taxi_DLT/.agents/skills/databricks-lakebase-provisioned/: SKILL.md
NYC_Taxi_DLT/.ai-dev-kit/: .installed-skills  version
NYC_Taxi_DLT/.claude/skills/databricks-bundles/: SKILL.md
NYC_Taxi_DLT/.codex/: config.toml
NYC_Taxi_DLT/.github/: PULL_REQUEST_TEMPLATE.md
NYC_Taxi_DLT/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
NYC_Taxi_DLT/.github/skills/databricks/: SKILL.md
NYC_Taxi_DLT/.github/skills/databricks-lakebase/: SKILL.md
NYC_Taxi_DLT/.github/workflows/: deploy-dev.yml  deploy-preprod.yml  deploy-prod.yml  pr-validate.yml  test.yml
NYC_Taxi_DLT/.kiro/settings/: mcp.json
NYC_Taxi_DLT/.kiro/skills/databricks-apps/: SKILL.md
NYC_Taxi_DLT/.opencode/skills/databricks-apps-python/: 3-frameworks.md
NYC_Taxi_DLT/resources/: .gitkeep  NYC_Taxi_DLT_etl.pipeline.yml  sample_job.job.yml
NYC_Taxi_DLT/src/: sample_notebook.ipynb
NYC_Taxi_DLT/src/NYC_Taxi_DLT/: main.py
NYC_Taxi_DLT/src/NYC_Taxi_DLT_etl/: README.md
NYC_Taxi_DLT/src/NYC_Taxi_DLT_etl/transformations/: sample_trips_NYC_Taxi_DLT.py  sample_zones_NYC_Taxi_DLT.py
NYC_Taxi_DLT/tests/: sample_taxis_test.py
